--- a/SmallCrm.Web/Views/Product/Create.cshtml
+++ b/SmallCrm.Web/Views/Product/Create.cshtml
@@ -2,17 +2,17 @@
 
     <form method="post" action="@Url.Action("create", "product")">
         <div class="form-group">
-            <label for=@Html.IdFor(p => p.CreateOptions.Id)>Id</label>
+            <label for="@Html.IdFor(p => p.CreateOptions.Id)">Id</label>
             @Html.TextBoxFor(p => p.CreateOptions.Id, new { @class = "form-control" })
         </div>
 
         <div class="form-group">
-            <label for=@Html.IdFor(p => p.CreateOptions.Name)>Name</label>
+            <label for="@Html.IdFor(p => p.CreateOptions.Name)">Name</label>
             @Html.TextBoxFor(p => p.CreateOptions.Name, new { @class = "form-control" })
         </div>
 
         <div class="form-group">
-            <label for=@Html.IdFor(p => p.CreateOptions.Price)>Price</label>
+            <label for="@Html.IdFor(p => p.CreateOptions.Price)">Price</label>
             @Html.TextBoxFor(p => p.CreateOptions.Price, new { @class = "form-control" })
         </div>
 
