--- a/SmallCrm.Web/Views/Customer/Index.cshtml
+++ b/SmallCrm.Web/Views/Customer/Index.cshtml
@@ -1,6 +1,6 @@
-﻿
-@model List<SmallCrm.Core.Model.Customer>
-<ul class="list-group">
+﻿@model List<SmallCrm.Core.Model.Customer>
+
+<ul class="list-group js-customer-list">
     @{
         foreach (var customer in Model)
         {
